# second-brain-mcp

./: README.md  SECURITY.md  pyproject.toml
src/second_brain_mcp/: server.py
